third_party/rust/serial_test_derive/tests/broken/test_serial_async_before_wrapper.rs
use serial_test_derive::serial;

#[serial]
#[actix_rt::test]
async fn test_async_serial_no_arg_actix() {}

fn main() {}